# psychotherapist_bot

./: README.md  pyproject.toml  server.py
src/: config.py
src/data/: evaluate.ipynb  preproc.ipynb
src/inference/: chat.py  classifier.py  inference.ipynb  llm.py
src/train/: classifier.ipynb  llm.ipynb  train_emo.py  train_llm.py
